--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ name = "elsm"
 version = "0.1.0"
 
 [dependencies]
-async-lock = "3.3.0"
+async-channel = "2"
+async-lock = "3"
 async-stream = "0.3"
 crc32fast = "1"
-crossbeam-skiplist = "0.1.3"
+executor = { git = "https://github.com/ethe/executor.git", branch = "main" }
 futures = "0.3"
+fxhash = "0.2.1"
 pin-project-lite = "0.2"
 thiserror = "1"
