--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ async-channel = "2"
 async-lock = "3"
 async-stream = "0.3"
 crc32fast = "1"
+crossbeam-queue = "0.3"
 executor = { git = "https://github.com/ethe/executor.git", branch = "main" }
 futures = "0.3"
-fxhash = "0.2.1"
+fxhash = "0.2"
 pin-project-lite = "0.2"
 thiserror = "1"
+unsend = "0.2"
