--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ crossbeam-queue = "0.3"
 executor = { git = "https://github.com/ethe/executor.git", branch = "main" }
 futures = "0.3"
 fxhash = "0.2"
-lazy_static = "1.4.0"
+lazy_static = "1"
+pin-project = "1"
 pin-project-lite = "0.2"
 regex = "1"
 thiserror = "1"
