--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ crossbeam-queue = "0.3"
 executor = { git = "https://github.com/ethe/executor.git", branch = "main" }
 futures = "0.3"
 fxhash = "0.2"
+# replace them with std::sync::lazy, once stabilized
 lazy_static = "1"
+once_cell = "1"
 pin-project = "1"
 pin-project-lite = "0.2"
 regex = "1"
