--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+workspace = { members = ["src/elsm_marco"] }
 [package]
 edition = "2021"
 name = "elsm"
@@ -11,6 +12,7 @@ async-stream = "0.3"
 bincode = "1"
 crc32fast = "1"
 crossbeam-queue = "0.3"
+elsm_marco = { path = "src/elsm_marco" }
 executor = { git = "https://github.com/ethe/executor.git", branch = "main" }
 futures = "0.3"
 fxhash = "0.2"
