--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ elsm_marco = { path = "src/elsm_marco" }
 executor = { git = "https://github.com/ethe/executor.git", branch = "main" }
 futures = "0.3"
 fxhash = "0.2"
+itertools = "0.13"
 # replace them with std::sync::lazy, once stabilized
 lazy_static = "1"
 once_cell = "1"
@@ -23,9 +24,9 @@ parquet = { version = "51", features = ["async"] }
 pin-project = "1"
 pin-project-lite = "0.2"
 regex = "1"
-snowflake = { version = "1", features = ["serde_support"] }
 thiserror = "1"
 tracing = "0.1"
+ulid = "1"
 unsend = "0.2"
 
 [dev-dependencies]
